--- a/ui-components.css
+++ b/ui-components.css
@@ -170,7 +170,7 @@
 /* Music Control Button - Moved to avoid blocking any text */
 .music-control {
     position: fixed;
-    top: 120px; /* Moved much further down to avoid blocking header text */
+    top: 160px; /* Moved further down from 120px to 160px */
     right: 30px; /* Moved slightly left to avoid edge conflicts */
     width: 50px;
     height: 50px;
